--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
     "sweetalert2": "^11.1.9",
+    "sweetalert2-react-content": "^4.2.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
