--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "redux-thunk": "^2.3.0",
     "sweetalert2": "^11.1.9",
     "sweetalert2-react-content": "^4.2.0",
+    "tui-calendar": "^1.15.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
