--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "redux": "^4.1.1",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.3.3",
     "sweetalert2": "^11.1.9",
     "sweetalert2-react-content": "^4.2.0",
     "tui-calendar": "^1.15.1",
