--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,9 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
+    "date-arithmetic": "^4.1.0",
     "date-fns": "^2.25.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-big-calendar": "^0.38.2",
     "react-dom": "^17.0.2",
